--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,184 +1,77 @@
-@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap");
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.box {
+    margin: 0px auto;
+    margin-top: 80px;
+    background: #fff9ee;
+    color: #333;
+    text-transform: uppercase;
+    padding: 8px;
+    width: 300px;
+    font-weight: bold;
+    text-shadow: 0px 1px 0px #fff;
+    font-family: "arvo";
+    font-size: 11px;
+    border-left: 1px dashed rgba(51, 51, 51, 0.5);
+    -webkit-filter: drop-shadow(0 5px 18px #000);
 }
 
-body,
-html {
-    font-family: "Staatliches", cursive;
-    color: black;
-    font-size: 14px;
-    letter-spacing: 0.1em;
+.inner {
+    border: 2px dashed rgba(51, 51, 51, 0.5);
+    min-height: 100px;
+    padding: 8px;
 }
-
-.ticket {
-    margin: auto;
-    display: flex;
-    background: white;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
-        rgba(0, 0, 0, 0.22) 0px 15px 12px;
-}
-
-.left {
-    display: flex;
-}
-
-.image {
-    height: 250px;
-    width: 250px;
-    /*background-image: url("https://media.pitchfork.com/photos/60db53e71dfc7ddc9f5086f9/1:1/w_1656,h_1656,c_limit/Olivia-Rodrigo-Sour-Prom.jpg");
-    background-size: contain;*/
-    opacity: 0.85;
-}
-
-.admit-one {
-    position: absolute;
-    color: darkgray;
-    height: 250px;
-    padding: 0 10px;
-    letter-spacing: 0.15em;
-    display: flex;
-    text-align: center;
-    justify-content: space-around;
-    writing-mode: vertical-rl;
-    transform: rotate(-180deg);
-}
-
-.admit-one span:nth-child(2) {
-    color: white;
-    font-weight: 700;
-}
-
-.left .ticket-number {
-    height: 250px;
-    width: 250px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    padding: 5px;
-}
-
-.ticket-info {
-    padding: 10px 30px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.date {
-    border-top: 1px solid gray;
-    border-bottom: 1px solid gray;
-    padding: 5px 0;
-    font-weight: 700;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.date span {
-    width: 100px;
-}
-
-.date span:first-child {
-    text-align: left;
-}
-
-.date span:last-child {
-    text-align: right;
-}
-
-.date .june-29 {
-    color: #d83565;
-    font-size: 20px;
-}
-
-.show-name {
-    font-size: 32px;
-    font-family: "Nanum Pen Script", cursive;
-    color: #d83565;
-}
-
-.show-name h1 {
-    font-size: 48px;
-    font-weight: 700;
-    letter-spacing: 0.1em;
-    color: #4a437e;
-}
-
-.time {
-    padding: 10px 0;
-    color: #4a437e;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    font-weight: 700;
-}
-
-.time span {
-    font-weight: 400;
-    color: gray;
-}
-
-.left .time {
-    font-size: 16px;
-}
-
-.location {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    padding-top: 8px;
-    border-top: 1px solid gray;
-}
-
-.location .separator {
-    font-size: 20px;
-}
-
-.right {
-    width: 180px;
-    border-left: 1px dashed #404040;
-}
-
-.right .admit-one {
-    color: darkgray;
-}
-
-.right .admit-one span:nth-child(2) {
-    color: gray;
-}
-
-.right .right-info-container {
-    height: 250px;
-    padding: 10px 10px 10px 35px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.right .show-name h1 {
+.inner h1 {
+    padding: 5px 0px;
+    margin: 0px;
     font-size: 18px;
+    border-bottom: 1px solid rgba(51, 51, 51, 0.3);
+    text-align: center;
+}
+.info {
+    width: 100%;
+    margin-top: 5px;
+}
+.info .wp {
+    float: left;
+    padding: 5px;
+    width: 83px;
+    text-align: center;
+}
+.info .wp h2 {
+    margin: 8px;
+}
+.total {
+    border-top: 1px solid rgba(51, 51, 51, 0.3);
 }
 
-.barcode {
-    height: 100px;
+.clearfix:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+.total h2 {
+    padding-left: 115px;
+    margin: 10px 0px;
+    font-size: 15px;
+}
+.total p {
+    float: right;
+    margin: 0px;
+    margin-right: 15px;
 }
 
-.barcode img {
-    height: 100%;
-}
-
-.right .ticket-number {
-    color: gray;
+a.buy {
+    color: #fff;
+    text-align: center;
+    font-size: 25px;
+    text-decoration: none;
+    display: block;
+    width: 200px;
+    margin: 0px auto;
+    margin-top: 50px;
+    padding: 5px;
+    background: rgba(0, 0, 0, 0.5);
 }
 .page-break {
     page-break-after: always;
